tests/snapshots/python_test__downstream_graph_mermaid_format.snap
---
source: tests/python_test.rs
expression: output
---
flowchart TD
    main("main") --> pkg_b_module_b("pkg_b.module_b")
