tests/snapshots/python_test__downstream_highlighted_mermaid.snap
---
source: tests/python_test.rs
expression: output
---
flowchart TD
    main("main") --> pkg_a("pkg_a")
    class main highlighted
    main("main") --> pkg_b_module_b("pkg_b.module_b")
    class pkg_b_module_b highlighted
    pkg_a_module_a("pkg_a.module_a") --> pkg_b("pkg_b")
    classDef highlighted fill:#bbdefb,stroke:#1976d2,stroke-width:2px
