tests/snapshots/python_test__downstream_namespace_list_format.snap
---
source: tests/python_test.rs
expression: output
---
normal_pkg.consumer
pep420_namespace.sub_a.module_a
pep420_namespace.sub_b.module_b
