tests/snapshots/python_test__exclude_scripts_pattern.snap
---
source: tests/python_test.rs
expression: dot_output
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
    "foo";
    "foo.bar";
}
