tests/snapshots/python_test__namespace_highlighted_mode.snap
---
source: tests/python_test.rs
expression: output
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
    // Note: Highlighted nodes are shown with light blue background
    "legacy_namespace.submodule.module";
    "normal_pkg";
    "normal_pkg.consumer" [fillcolor=lightblue, style=filled];
    "pep420_namespace.sub_a.module_a" [fillcolor=lightblue, style=filled];
    "pep420_namespace.sub_b.module_b" [fillcolor=lightblue, style=filled];
    "normal_pkg.consumer" -> "legacy_namespace.submodule.module";
    "normal_pkg.consumer" -> "pep420_namespace.sub_b.module_b";
    "pep420_namespace.sub_a.module_a" -> "normal_pkg";
    "pep420_namespace.sub_b.module_b" -> "pep420_namespace.sub_a.module_a";
}
